--- a/package.json
+++ b/package.json
@@ -50,19 +50,40 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4030620241128001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
+    "pinia": "2.0.27",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.26.8",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@dcloudio/types": "^3.4.8",
     "@dcloudio/uni-automator": "3.0.0-4030620241128001",
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
-    "@vue/tsconfig": "^0.1.3",
     "@vue/runtime-core": "^3.4.21",
+    "@vue/tsconfig": "^0.1.3",
+    "commitlint": "^19.7.1",
+    "eslint": "^9.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-vue": "^9.32.0",
+    "husky": "6",
+    "lint-staged": "^15.4.3",
+    "sass": "^1.85.0",
+    "stylelint": "^16.14.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "^6.11.1",
     "typescript": "^4.9.4",
+    "unplugin-auto-import": "^19.1.0",
     "vite": "5.2.8",
+    "vue-global-api": "^0.4.1",
     "vue-tsc": "^1.0.24"
   }
 }
