--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,33 @@
     "sourceMap": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     },
-    "lib": ["esnext", "dom"],
-    "types": ["@dcloudio/types"]
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "types": [
+      "@dcloudio/types",
+      "@types/wechat-miniprogram",
+      // "@uni-helper/uni-app-types"
+    ]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "vueCompilerOptions": {
+    // Vue 3.x 默认使用 runtime-dom 模式，因此这个选项实际上是不需要的。
+    // 如果确实需要覆盖默认行为，请确保使用的Vue版本支持此选项。
+     // Vue-Official  v2.0.12 配置写法
+     "nativeTags": ["block", "component", "template", "slot"],
+
+    // Vue-Official  v2.0.14+ 配置写法(最新写法)
+    "plugins": ["@uni-helper/uni-app-types/volar-plugin"]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ]
 }
