--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "uni-preset-vue",
   "version": "0.0.0",
+  "engines": {
+    "node": "^18.16.1 || >=18.16.1",
+    "pnpm": ">=7.22.0"
+  },
   "scripts": {
     "dev:custom": "uni -p",
     "dev:h5": "uni",
