--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4030620241128001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
+    "@dcloudio/uni-ui": "^1.5.7",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "3.2.0",
     "unplugin-auto-import": "^19.1.0",
@@ -66,6 +67,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
+    "@uni-helper/uni-app-types": "1.0.0-alpha.6",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.85.0",
