faet: 设置自动导入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,10 @@
       "dom"
     ],
     "types": [
-      // "@dcloudio/types",
-      // "@types/wechat-miniprogram",
-      "@uni-helper/uni-app-types"
+      "@dcloudio/types",
+      "@types/wechat-miniprogram",
+      "@uni-helper/uni-app-types",
+      "@uni-helper/uni-ui-types",
     ]
   },
   "vueCompilerOptions": {
