--- a/package.json
+++ b/package.json
@@ -57,21 +57,23 @@
     "@dcloudio/uni-ui": "^1.5.7",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "3.2.0",
-    "unplugin-auto-import": "^19.1.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.4.8",
+    "@dcloudio/types": "^3.4.14",
     "@dcloudio/uni-automator": "3.0.0-4030620241128001",
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
+    "@types/wechat-miniprogram": "^3.4.8",
     "@uni-helper/uni-app-types": "1.0.0-alpha.6",
+    "@uni-helper/uni-ui-types": "1.0.0-alpha.6",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.85.0",
     "typescript": "^4.9.4",
+    "unplugin-auto-import": "^19.1.0",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
   }
