--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
-    "format": "prettier --write . && pnpm lint --fix"
+    "format": "prettier --write . && pnpm lint --fix",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4030620241128001",
@@ -79,6 +80,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "prettier": "^3.5.2",
     "sass": "^1.85.0",
     "typescript": "^4.9.4",
