--- a/package.json
+++ b/package.json
@@ -38,8 +38,15 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
-    "format": "prettier --write . && pnpm lint --fix",
-    "postinstall": "husky install"
+    "lint-staged": "lint-staged",
+    "postinstall": "husky install",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,jsx,tsx}": [
+      "eslint --cache --fix",
+      "git add"
+    ]
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4030620241128001",
@@ -81,6 +88,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.5.2",
     "sass": "^1.85.0",
     "typescript": "^4.9.4",
