--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "postinstall": "husky install",
     "prepare": "husky install"
   },
+  "lint-staged": {
+  "**/*.{vue,js,ts,jsx,tsx}": [
+    "eslint --fix"
+  ]
+},
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4030620241128001",
     "@dcloudio/uni-app-harmony": "3.0.0-4030620241128001",
@@ -64,6 +69,8 @@
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@dcloudio/types": "^3.4.14",
     "@dcloudio/uni-automator": "3.0.0-4030620241128001",
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
@@ -75,11 +82,13 @@
     "@uni-helper/uni-ui-types": "1.0.0-alpha.6",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
+    "commitlint": "^19.7.1",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^16.0.0",
+    "husky": "6",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.2",
     "sass": "^1.85.0",
