--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "uni-preset-vue",
   "version": "0.0.0",
   "engines": {
-    "node": "^18.16.1 || >=18.16.1",
-    "pnpm": ">=7.22.0"
+    "node": "18.16.1",
+    "pnpm": "7.22.0"
   },
   "scripts": {
     "dev:custom": "uni -p",
