--- a/src/manifest.json
+++ b/src/manifest.json
@@ -56,7 +56,13 @@
             "minified": true
         },
         "usingComponents" : true,
-        "requiredBackgroundModes": ["audio"]
+        "requiredBackgroundModes": ["audio"],
+        "requiredPrivateInfos":["getLocation"],
+        "permission": {
+            "scope.userLocation": {
+              "desc": "您的位置信息将用于小程序位置效果展示" 
+            }
+          }
     },
     "mp-alipay" : {
         "usingComponents" : true
