--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@dcloudio/uni-ui": "^1.5.7",
     "js-base64": "^3.7.7",
     "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "3.2.0",
     "vue": "^3.4.21",
