--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,10 @@
     "strictBindCallApply": true, // 严格的 bind、call 和 apply 方法检查
     "strictPropertyInitialization": true, // 严格的属性初始化检查
     "noImplicitThis": true, // 禁止隐式的 this 类型
-    "alwaysStrict": true // 始终启用严格模式
+    "alwaysStrict": true, // 始终启用严格模式
+
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "vueCompilerOptions": {
     // Vue 3.x 默认使用 runtime-dom 模式，因此这个选项实际上是不需要的。
