--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,28 +1,34 @@
 {
-    "name" : "",
-    "appid" : "",
-    "description" : "",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
-    "transformPx" : false,
+    "name": "",
+    "appid": "",
+    "description": "",
+    "versionName": "1.0.0",
+    "versionCode": "100",
+    "transformPx": false,
+    "networkTimeout": {
+        "request": 600000,
+        "connectSocket": 600000,
+        "uploadFile": 600000,
+        "downloadFile": 600000
+    },
     /* 5+App特有相关 */
-    "app-plus" : {
-        "usingComponents" : true,
-        "nvueStyleCompiler" : "uni-app",
-        "compilerVersion" : 3,
-        "splashscreen" : {
-            "alwaysShowBeforeRender" : true,
-            "waiting" : true,
-            "autoclose" : true,
-            "delay" : 0
+    "app-plus": {
+        "usingComponents": true,
+        "nvueStyleCompiler": "uni-app",
+        "compilerVersion": 3,
+        "splashscreen": {
+            "alwaysShowBeforeRender": true,
+            "waiting": true,
+            "autoclose": true,
+            "delay": 0
         },
         /* 模块配置 */
-        "modules" : {},
+        "modules": {},
         /* 应用发布信息 */
-        "distribute" : {
+        "distribute": {
             /* android打包配置 */
-            "android" : {
-                "permissions" : [
+            "android": {
+                "permissions": [
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
@@ -41,40 +47,44 @@
                 ]
             },
             /* ios打包配置 */
-            "ios" : {},
+            "ios": {},
             /* SDK配置 */
-            "sdkConfigs" : {}
+            "sdkConfigs": {}
         }
     },
     /* 快应用特有相关 */
-    "quickapp" : {},
-     /* 小程序特有相关 */
-     "mp-weixin" : {
-        "appid" : "wx40fb2125cc83cde0",
-        "setting" : {
-            "urlCheck" : false,
+    "quickapp": {},
+    /* 小程序特有相关 */
+    "mp-weixin": {
+        "appid": "wx40fb2125cc83cde0",
+        "setting": {
+            "urlCheck": false,
             "minified": true
         },
-        "usingComponents" : true,
-        "requiredBackgroundModes": ["audio"],
-        "requiredPrivateInfos":["getLocation"],
+        "usingComponents": true,
+        "requiredBackgroundModes": [
+            "audio"
+        ],
+        "requiredPrivateInfos": [
+            "getLocation"
+        ],
         "permission": {
             "scope.userLocation": {
-              "desc": "您的位置信息将用于小程序位置效果展示" 
+                "desc": "您的位置信息将用于小程序位置效果展示"
             }
-          }
+        }
     },
-    "mp-alipay" : {
-        "usingComponents" : true
+    "mp-alipay": {
+        "usingComponents": true
     },
-    "mp-baidu" : {
-        "usingComponents" : true
+    "mp-baidu": {
+        "usingComponents": true
     },
-    "mp-toutiao" : {
-        "usingComponents" : true
+    "mp-toutiao": {
+        "usingComponents": true
     },
-    "uniStatistics": {  
+    "uniStatistics": {
         "enable": false
     },
-    "vueVersion" : "3"
+    "vueVersion": "3"
 }
