--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.7",
+    "dayjs": "^1.11.18",
     "js-base64": "^3.7.7",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
-    "moment": "^2.30.1",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "3.2.0",
     "vue": "^3.4.21",
